feat: Create new a activity
